--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/static/js/login.js" defer></script>
+    <!-- <script src="/static/js/login.js" defer></script> -->
     <title>Cadastro</title>
     <link rel="stylesheet" href="/static/css/cadastro.css">
     <script src="/static/js/cadastro.js" defer></script>
